instructions/src/instructions/snapshots/instructions__instructions__voice_announcements__tests__depart_announcement.snap
---
source: instructions/src/instructions/voice_announcements.rs
expression: announcements
---
[
    Depart(
        Distance {
            value: 468.0137,
            unit: Meters,
        },
    ),
    Maneuver(
        Distance {
            value: 70.0,
            unit: Meters,
        },
    ),
]
